<resources>
    <string name="app_name">SpeakHumanish</string>
    <string name="questionTitle">Please solve:</string>
    <string name="question">1+1</string>
    <string name="answerTitle">Answer:</string>
    <string name="answer">Please enter the answer</string>
    <string name="submit">Submit</string>
    <string name="static_cards">Static Cards</string>
    <string name="main_cards">Main Cards</string>
    <string name="current_screen_parent_image">Will contain the current card in question for editing</string>
    <string name="home_screen">Home Screen</string>
    <string name="card_image_description">The image of the card</string>
    <string name="change_the_image_btn_title">Change The Image</string>
    <string name="card_title">Card Title:</string>
    <string name="play">Play</string>
    <string name="add_sound">Add sound</string>
    <string name="delete_card">Delete Card</string>
</resources>
