<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/securityQuestionLayout"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:text="@string/questionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="5sp"
                app:autoSizeMaxTextSize="18sp"
                app:autoSizeStepGranularity="2sp"/>
        <TextView
                android:id="@+id/securityQuestionText"
                android:text="@string/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="5sp"
                app:autoSizeMaxTextSize="18sp"
                app:autoSizeStepGranularity="2sp"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:text="@string/answerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="5sp"
                app:autoSizeMaxTextSize="18sp"
                app:autoSizeStepGranularity="2sp"/>
        <EditText
                android:id="@+id/securityQuestionAnswerEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="5sp"
                app:autoSizeMaxTextSize="18sp"
                app:autoSizeStepGranularity="2sp"
                android:inputType="numberSigned"
                android:hint="@string/answer"
                android:ems="10"/>
    </LinearLayout>
    <Button
            android:id="@+id/submit_security_question_button"
            android:text="@string/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="5sp"
            app:autoSizeMaxTextSize="18sp"
            app:autoSizeStepGranularity="2sp"/>

</LinearLayout>